--- a/app/views/clients/basic_info.html.erb
+++ b/app/views/clients/basic_info.html.erb
@@ -16,56 +16,40 @@
 <div class="wrapper wrapper-content">
     <div class="row">
         <div class="col-lg-12">
-            <div class="ibox">
-                <div class="ibox-title">
-                    <h5>客户开户向导</h5>
-                </div>
-                <div class="ibox-content">
+            <div class="tabs-container">
 
-                    <div role="application" class="wizard clearfix">
-                        <div class="steps clearfix">
-                            <ul role="tablist">
-                                <li role="tab" class="first disabled">
-                                    <a id="wizard-t-0" href="#" aria-controls="wizard-p-0"><span class="current-info audible">current step: </span><span class="number">1.</span> First Step</a>
-                                </li>
-                                <li role="tab" class="current">
-                                    <a id="wizard-t-1" href="#wizard-h-1" aria-controls="wizard-p-1"><span class="number">2.</span> Second Step</a>
-                                </li>
-                                <li role="tab" class="disabled last" aria-disabled="true">
-                                    <a id="wizard-t-2" href="#wizard-h-2" aria-controls="wizard-p-2"><span class="number">3.</span> Third Step</a>
-                                </li>
-                            </ul>
-                        </div><div class="content clearfix">
+                <div class="tabs-left">
+                    <ul class="nav nav-tabs">
+                        <li class="active"><a data-toggle="tab" href="#tab-6"> This is tab</a></li>
+                        <li class=""><a data-toggle="tab" href="#tab-7">This is second tab</a></li>
+                    </ul>
+                    <div class="tab-content ">
+                        <div id="tab-6" class="tab-pane active">
+                            <div class="panel-body">
+                                <strong>Lorem ipsum dolor sit amet, consectetuer adipiscing</strong>
 
-                          <div class="step-content body current" id="wizard-p-0" role="tabpanel" aria-labelledby="wizard-h-0" aria-hidden="false">
-                              <div class="text-center m-t-md">
-                                <h2>选择客户类型</h2>
-                                <p>
-                                    <%= render 'form' %>
-                                </p>
-                              </div>
-                          </div>
+                                <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of
+                                    existence in this spot, which was created for the bliss of souls like mine.</p>
+
+                                <p>I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents. I should be incapable of drawing a single stroke at
+                                    the present moment; and yet I feel that I never was a greater artist than now. When.</p>
+                            </div>
+                        </div>
+                        <div id="tab-7" class="tab-pane">
+                            <div class="panel-body">
+                                <strong>Donec quam felis</strong>
+
+                                <p>Thousand unknown plants are noticed by me: when I hear the buzz of the little world among the stalks, and grow familiar with the countless indescribable forms of the insects
+                                    and flies, then I feel the presence of the Almighty, who formed us in his own image, and the breath </p>
+
+                                <p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite
+                                    sense of mere tranquil existence, that I neglect my talents. I should be incapable of drawing a single stroke at the present moment; and yet.</p>
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="actions clearfix">
-                        <ul role="menu" aria-label="Pagination">
-                            <li class="disabled" aria-disabled="true">
-                                <a href="#previous" role="menuitem">Previous</a>
-                            </li>
-                            <li aria-hidden="false" aria-disabled="false">
-                                <a href="#next" role="menuitem">Next</a>
-                            </li>
-                            <li aria-hidden="false">
-                                <a href="#finish" role="menuitem">Finish</a>
-                            </li>
-                            <li>
-                                <a href="#cancel" role="menuitem">Cancel</a>
-                            </li>
-                        </ul>
-                    </div>
-
-
                 </div>
+
             </div>
         </div>
     </div>
