--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -16,33 +16,29 @@
 </div>
 
 <div class="wrapper wrapper-content">
-    <div class="row">
+    <div class="row m-b-lg">
         <div class="col-lg-12">
-            <div class="ibox float-e-margins">
-                <div class="ibox-title">
-                    <h5>All form elements <small>With custom checbox and radion elements.</small></h5>
-                    <div class="ibox-tools">
-                        <a class="collapse-link">
-                            <i class="fa fa-chevron-up"></i>
-                        </a>
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            <i class="fa fa-wrench"></i>
-                        </a>
-                        <ul class="dropdown-menu dropdown-user">
-                            <li><a href="#">Config option 1</a>
-                            </li>
-                            <li><a href="#">Config option 2</a>
-                            </li>
-                        </ul>
-                        <a class="close-link">
-                            <i class="fa fa-times"></i>
-                        </a>
+            <div class="tabs-container">
+                <ul class="nav nav-tabs">
+                    <li class="active"><a data-toggle="tab" href="#tab-1"> This is tab</a></li>
+                    <li class=""><a data-toggle="tab" href="#tab-2">This is second tab</a></li>
+                </ul>
+                <div class="tab-content">
+                    <div id="tab-1" class="tab-pane active">
+                        <div class="panel-body">
+                            <%= render 'form' %>
+                        </div>
+                    </div>
+                    <div id="tab-2" class="tab-pane">
+                        <div class="panel-body">
+                            <%= render 'form' %>
+                        </div>
                     </div>
                 </div>
-                <div class="ibox-content">
-                  <%= render 'form' %>
-                </div>
+
+
             </div>
         </div>
     </div>
 </div>
+<p></p>
