--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -20,7 +20,7 @@
         <div class="col-lg-12">
             <div class="tabs-container">
                 <ul class="nav nav-tabs">
-                    <li class="active"><a data-toggle="tab" href="#tab-1"> This is tab</a></li>
+                    <li class="active"><a data-toggle="tab" href="#tab-1"> 投资人基本信息（所有项目必填）</a></li>
                     <li class=""><a data-toggle="tab" href="#tab-2">This is second tab</a></li>
                 </ul>
                 <div class="tab-content">
