--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -18,26 +18,32 @@
         <div class="col-lg-12">
             <div class="ibox">
                 <div class="ibox-title">
-                    <h5><%= t('activerecord.text.instances_list', model: Client.model_name.human) %></h5>
+                    <h5>搜索</h5>
                     <div class="ibox-tools">
-                        <%= link_to '个人开户', new_client_path(individual: true), class: 'btn btn-primary btn-xs' %>
-                        <%= link_to '机构开户', new_client_path(institution: true), class: 'btn btn-primary btn-xs' %>
+                        <a class="collapse-link">
+                            <i class="fa fa-chevron-up"></i>
+                        </a>
                     </div>
                 </div>
+                <div class="ibox-content" style="display: block;">
+                    <%= render 'search_form' %>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="ibox">
+
                 <div class="ibox-content">
 
                     <div class="m-b-lg">
 
-                        <div class="input-group">
-                            <input type="text" placeholder="Search scenario by name or code..." class=" form-control">
-                            <span class="input-group-btn">
-                                <button type="button" class="btn btn-white">
-                                    Search</button>
-                            </span>
-                        </div>
-                        <div class="m-t-md">
+                        <div>
 
                             <div class="pull-right">
+                              <%= link_to '个人开户', new_client_path(individual: true), class: 'btn btn-primary btn-sm' %>
+                              <%= link_to '机构开户', new_client_path(institution: true), class: 'btn btn-primary btn-sm' %>
                                 <button type="button" class="btn btn-sm btn-white">
                                     <i class="fa fa-comments"></i>
                                 </button>
@@ -58,7 +64,11 @@
                                 </button>
                             </div>
 
-                            <strong>Found <%= @clients_grid.count %> clients.</strong>
+                            <div class="btn-group">
+                                <%= link_to '全部', clients_path(params.delete(:type)), class: 'btn btn-white btn-sm' %>
+                                <%= link_to '个人', clients_path(params.merge(type: 'individual')), class: 'btn btn-white btn-sm' %>
+                                <%= link_to '机构', clients_path(params.merge(type: 'institution')), class: 'btn btn-white btn-sm' %>
+                            </div>
 
                         </div>
 
