--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -40,7 +40,7 @@
 
   <div class="form-group">
       <div class="col-sm-4 col-sm-offset-2">
-          <%= f.submit t('button.save'), class: 'btn btn-primary btn-sm', id: 'client-save-btn' %>
+          <%= f.submit t('buttons.save'), class: 'btn btn-primary btn-sm', id: 'client-save-btn' %>
           or
           <%= link_to t('activerecord.text.back_to_list', model: Client.model_name.human),
           clients_path %>
