complete asset/product query

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,12 +1,12 @@
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-        <h2><%= t('activerecord.text.edit_instance', model: Asset.model_name.human) %></h2>
+        <h2><%= t('activerecord.text.edit_instance', model: Product.model_name.human) %></h2>
         <ol class="breadcrumb">
             <li>
                 <%= link_to t('text.home'), root_path %>
             </li>
             <li class="active">
-                <strong><%= t('activerecord.text.edit_instance', model: Asset.model_name.human) %></strong>
+                <strong><%= t('activerecord.text.edit_instance', model: Product.model_name.human) %></strong>
             </li>
         </ol>
     </div>
