--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -34,47 +34,19 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="ibox">
-                <div class="ibox-title">
-                    <h5><%= t('activerecord.text.instances_list', model: Product.model_name.human) %></h5>
-                    <div class="ibox-tools">
-                        <%= link_to t('activerecord.text.new_instance', model: Product.model_name.human), new_product_path, class: 'btn btn-primary btn-xs' %>
-                    </div>
-                </div>
                 <div class="ibox-content">
 
                     <div class="m-b-lg">
 
-                        <div class="input-group">
-                            <input type="text" placeholder="Search scenario by name or code..." class=" form-control">
-                            <span class="input-group-btn">
-                                <button type="button" class="btn btn-white">
-                                    Search</button>
-                            </span>
-                        </div>
-                        <div class="m-t-md">
+                        <div class="">
 
                             <div class="pull-right">
-                                <button type="button" class="btn btn-sm btn-white">
-                                    <i class="fa fa-comments"></i>
-                                </button>
-                                <button type="button" class="btn btn-sm btn-white">
-                                    <i class="fa fa-user"></i>
-                                </button>
-                                <button type="button" class="btn btn-sm btn-white">
-                                    <i class="fa fa-list"></i>
-                                </button>
-                                <button type="button" class="btn btn-sm btn-white">
-                                    <i class="fa fa-pencil"></i>
-                                </button>
-                                <button type="button" class="btn btn-sm btn-white">
-                                    <i class="fa fa-print"></i>
-                                </button>
-                                <button type="button" class="btn btn-sm btn-white">
-                                    <i class="fa fa-cogs"></i>
-                                </button>
+                                <%= link_to t('activerecord.text.new_instance', model: Product.model_name.human), new_product_path, class: 'btn btn-primary btn-sm' %>
                             </div>
 
-                            <strong>Found <%= @products_grid.count %> products.</strong>
+                            <div class="btn-group">
+
+                            </div>
 
                         </div>
 
