complete create product

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,10 +1,94 @@
-<%= simple_form_for(@product) do |f| %>
+<%= simple_form_for(@product, html: { class: 'form-horizontal' }) do |f| %>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-  </div>
+  <%= f.input :name %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :short_name %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :client_code %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :manager_name %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :code %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :running_status %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :type %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :dev_type %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :initial_fund %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :trustor_name %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :trustor_account_name %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :trustor_bank_name %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :trustor_bank_account %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :securities_account_name %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :securities_bank_name %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :securities_capital_account %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :valuation_out_sourcing %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :deposited_at, as: :date_time_picker %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :delegation_started_at, as: :date_time_picker %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :delegation_ended_at, as: :date_time_picker %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :delegation_duration %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :fee_calculation_standard %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :management_fee_ratio %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :year_day_count %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :management_fee_flour %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :trustor_fee_ratio %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :operation_fee_ratio %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :investment_consultant_fee_ratio %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :investment_consultant_fee_flour %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :bonus %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :sales_fee_ratio %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :sse_account_code %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :szse_account_code %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :cffex_account_code %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :zce_account_code %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :dce_account_code %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :shfe_account_code %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :sales_department %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :investment_consultant_reference_department %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :operation_department %>
+  <div class="hr-line-dashed"></div>
+  <%= f.input :investment_consultant_name %>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
+  <div class="form-group">
+      <div class="col-sm-4 col-sm-offset-2">
+          <%= f.submit t('buttons.save'), class: 'btn btn-primary btn-sm', id: 'client-save-btn' %>
+          or
+          <%= link_to t('activerecord.text.back_to_list', model: Product.model_name.human),
+          clients_path %>
+      </div>
   </div>
 <% end %>
